--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Set Environment Variables
         run: |
           if [ "${{ github.event.inputs.environment }}" = "prd" ]; then
-            echo "DATABRICKS_HOST=<DatabricksWorkSpaceURL>" >> $GITHUB_ENV
-            echo "DATABRICKS_TOKEN=<PersonalAccessToken>" >> $GITHUB_ENV
+            echo "DATABRICKS_HOST=https://adb-3377896307905892.12.azuredatabricks.net" >> $GITHUB_ENV
+            echo "DATABRICKS_TOKEN=dapi6a073c74ecc08c9fd95ae26d75d0152a-3" >> $GITHUB_ENV
           else
             echo "DATABRICKS_HOST=<DatabricksWorkSpaceURL>" >> $GITHUB_ENV
             echo "DATABRICKS_TOKEN=<PersonalAccessToken>" >> $GITHUB_ENV
@@ -45,4 +45,4 @@ jobs:
           databricks-host: ${{ env.DATABRICKS_HOST }}
           databricks-token: ${{ env.DATABRICKS_TOKEN }}
           local-path: /home/runner/work/DataAnalytics/DataAnalytics/
-          remote-path: /Workspace/Users/adb_adm_01@outlook.com
+          remote-path: /Workspace/Users/lokesh.challa012_gmail.com#ext#@lokeshchalla012gmail.onmicrosoft.com
